<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ImageJobWindow</class>
 <widget class="QMainWindow" name="ImageJobWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1024</width>
    <height>800</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="minimumSize">
   <size>
    <width>800</width>
    <height>640</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>Geometrize</string>
  </property>
  <property name="unifiedTitleAndToolBarOnMac">
   <bool>true</bool>
  </property>
  <widget class="QWidget" name="centralWidget">
   <property name="sizePolicy">
    <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
     <width>300</width>
     <height>300</height>
    </size>
   </property>
   <property name="autoFillBackground">
    <bool>true</bool>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_15">
    <item>
     <widget class="QSplitter" name="splitter">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
      <widget class="QWidget" name="imageViewContainer" native="true">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="minimumSize">
        <size>
         <width>0</width>
         <height>0</height>
        </size>
       </property>
       <property name="autoFillBackground">
        <bool>true</bool>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_4">
        <item>
         <layout class="QVBoxLayout" name="imageViewContainerLayout"/>
        </item>
       </layout>
      </widget>
      <widget class="geometrize::dialog::ScriptConsole" name="consoleWidget" native="true">
       <property name="enabled">
        <bool>true</bool>
       </property>
       <property name="sizePolicy">
        <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
      </widget>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menuBar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1024</width>
     <height>17</height>
    </rect>
   </property>
   <property name="autoFillBackground">
    <bool>true</bool>
   </property>
   <widget class="QMenu" name="menuFile">
    <property name="title">
     <string>File</string>
    </property>
    <addaction name="actionLoad_Settings_Template"/>
    <addaction name="actionSave_Settings_Template"/>
    <addaction name="actionExit"/>
   </widget>
   <widget class="QMenu" name="menuView">
    <property name="title">
     <string>View</string>
    </property>
    <addaction name="actionReveal_Launch_Window"/>
    <addaction name="actionReveal_Script_Editor"/>
    <addaction name="actionScript_Console"/>
    <addaction name="actionPixmap_Results_View"/>
    <addaction name="actionVector_Results_View"/>
   </widget>
   <addaction name="menuFile"/>
   <addaction name="menuView"/>
  </widget>
  <widget class="QDockWidget" name="statsDock">
   <property name="contextMenuPolicy">
    <enum>Qt::NoContextMenu</enum>
   </property>
   <property name="autoFillBackground">
    <bool>true</bool>
   </property>
   <property name="features">
    <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
   </property>
   <property name="allowedAreas">
    <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
   </property>
   <property name="windowTitle">
    <string>Stats</string>
   </property>
   <attribute name="dockWidgetArea">
    <number>1</number>
   </attribute>
   <widget class="geometrize::dialog::ImageJobStatsWidget" name="statsDockContents">
    <layout class="QVBoxLayout" name="verticalLayout_26"/>
   </widget>
  </widget>
  <widget class="QDockWidget" name="targetImageSettingsDock">
   <property name="features">
    <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
   </property>
   <property name="allowedAreas">
    <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
   </property>
   <property name="windowTitle">
    <string>Target Image</string>
   </property>
   <attribute name="dockWidgetArea">
    <number>2</number>
   </attribute>
   <widget class="QWidget" name="targetImageSettingsDockContents">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QScrollArea" name="targetImageSettingsScrollArea">
       <property name="frameShape">
        <enum>QFrame::NoFrame</enum>
       </property>
       <property name="frameShadow">
        <enum>QFrame::Plain</enum>
       </property>
       <property name="widgetResizable">
        <bool>true</bool>
       </property>
       <widget class="geometrize::dialog::ImageJobTargetImageWidget" name="imageJobTargetImageWidget">
        <property name="geometry">
         <rect>
          <x>0</x>
          <y>0</y>
          <width>49</width>
          <height>231</height>
         </rect>
        </property>
       </widget>
      </widget>
     </item>
    </layout>
   </widget>
  </widget>
  <widget class="QDockWidget" name="exporterDock">
   <property name="features">
    <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
   </property>
   <property name="allowedAreas">
    <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
   </property>
   <property name="windowTitle">
    <string>Exporters</string>
   </property>
   <attribute name="dockWidgetArea">
    <number>2</number>
   </attribute>
   <widget class="QWidget" name="exporterDockContents">
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
      <widget class="QScrollArea" name="exporterScrollArea">
       <property name="frameShape">
        <enum>QFrame::NoFrame</enum>
       </property>
       <property name="frameShadow">
        <enum>QFrame::Plain</enum>
       </property>
       <property name="widgetResizable">
        <bool>true</bool>
       </property>
       <widget class="geometrize::dialog::ImageJobExportWidget" name="imageJobExportWidget">
        <property name="geometry">
         <rect>
          <x>0</x>
          <y>0</y>
          <width>49</width>
          <height>232</height>
         </rect>
        </property>
       </widget>
      </widget>
     </item>
    </layout>
   </widget>
  </widget>
  <widget class="QDockWidget" name="runnerSettingsDock">
   <property name="features">
    <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
   </property>
   <property name="allowedAreas">
    <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
   </property>
   <property name="windowTitle">
    <string>Runner Settings</string>
   </property>
   <attribute name="dockWidgetArea">
    <number>2</number>
   </attribute>
   <widget class="QWidget" name="runnerSettingsDockContents">
    <property name="sizePolicy">
     <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
      <horstretch>0</horstretch>
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_3">
     <item>
      <widget class="QScrollArea" name="runnerSettingsScrollArea">
       <property name="frameShape">
        <enum>QFrame::NoFrame</enum>
       </property>
       <property name="frameShadow">
        <enum>QFrame::Plain</enum>
       </property>
       <property name="widgetResizable">
        <bool>true</bool>
       </property>
       <widget class="geometrize::dialog::ImageJobRunnerWidget" name="imageJobRunnerWidget">
        <property name="geometry">
         <rect>
          <x>0</x>
          <y>0</y>
          <width>49</width>
          <height>231</height>
         </rect>
        </property>
       </widget>
      </widget>
     </item>
    </layout>
   </widget>
  </widget>
  <action name="actionExit">
   <property name="text">
    <string>Exit</string>
   </property>
  </action>
  <action name="actionSave_Settings_Template">
   <property name="text">
    <string>Save Settings Template</string>
   </property>
  </action>
  <action name="actionReveal_Launch_Window">
   <property name="text">
    <string>Reveal Launch Window</string>
   </property>
  </action>
  <action name="actionLoad_Settings_Template">
   <property name="text">
    <string>Load Settings Template</string>
   </property>
  </action>
  <action name="actionScript_Console">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Script Console</string>
   </property>
  </action>
  <action name="actionReveal_Script_Editor">
   <property name="text">
    <string>Reveal Script Editor</string>
   </property>
  </action>
  <action name="actionPixmap_Results_View">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="checked">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Pixmap Results View</string>
   </property>
  </action>
  <action name="actionVector_Results_View">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="checked">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Vector Results View</string>
   </property>
  </action>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <customwidgets>
  <customwidget>
   <class>geometrize::dialog::ScriptConsole</class>
   <extends>QWidget</extends>
   <header>dialog/scriptconsole.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>geometrize::dialog::ImageJobStatsWidget</class>
   <extends>QWidget</extends>
   <header>dialog/imagejobstatswidget.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>geometrize::dialog::ImageJobTargetImageWidget</class>
   <extends>QWidget</extends>
   <header>dialog/imagejobtargetimagewidget.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>geometrize::dialog::ImageJobExportWidget</class>
   <extends>QWidget</extends>
   <header>dialog/imagejobexportwidget.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>geometrize::dialog::ImageJobRunnerWidget</class>
   <extends>QWidget</extends>
   <header>dialog/imagejobrunnerwidget.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
